# subsonic-resonance

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  LICENSING.md  README.md  TODO.md  package-lock.json  package.json
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/desktop/: Cargo.toml  tauri.conf.json
crates/desktop/src/: main.rs
crates/provider-subsonic/: Cargo.toml
crates/provider-subsonic/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/ui/: Cargo.toml  Trunk.toml  base.css  components.css  index.html  live.css  player.css  styles.css
crates/ui/src/: lib.rs
docs-site/: README.md  docusaurus.config.ts  package.json  pnpm-lock.yaml
docs-site/api/: package.json
docs-site/api/src/: index.ts
docs-site/config/: gitHub.yml  globalConfig.yml  version.yml
docs-site/docs/: intro.md
docs-site/docs/architecture/: overview.md
docs-site/docs/getting-started/: installation.md
docs-site/docs/project/: licensing.md  roadmap.md  status.md  todo.md
docs-site/docs/releases/: 0.1.1.md  0.1.2.md  0.1.3.md  0.1.4.md  0.1.5.md  changelog.md
docs-site/src/components/Custom404/: Custom404.tsx
docs-site/src/components/Portfolio/: portfolio.css
docs-site/src/css/: custom.css  fonts.css
docs-site/src/pages/: index.module.css  index.tsx
docs-site/src/pages/demos/: 404.tsx
docs-site/src/theme/Navbar/Logo/: index.tsx
docs-site/static/themes/: blue.css  default.css  sunset.css
scripts/: build-and-run.ps1  build-and-run.sh  git-release.js  run-lighthouse.js  run-ui.js  sync-docs.js  version-sync.js
scripts/templates/: Accessibility-Assessment.md
