[package]
name = "subsonic-resonance-provider-subsonic"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
async-trait.workspace = true
hex.workspace = true
md-5.workspace = true
rand.workspace = true
reqwest.workspace = true
subsonic-resonance-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
url.workspace = true
