[package]
name = "subsonic-resonance-server"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
axum.workspace = true
reqwest.workspace = true
subsonic-resonance-core = { path = "../core" }
subsonic-resonance-provider-subsonic = { path = "../provider-subsonic" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
