[package]
name = "subsonic-resonance-ui"
version = "0.1.5"
edition = "2021"
license-file.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
gloo-net = { version = "0.6", features = ["json"] }
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Element", "Event", "EventTarget", "HtmlAudioElement", "Storage", "Window"] }
